add full features